[gd_scene load_steps=27 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Player/walk_0.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Player/walk_1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player/walk_2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/walk_3.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/walk_4.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/walk_5.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/walk_6.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Player/walk_7.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Player/Idle0.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Player/Run0.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Player/Run1.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Player/Run2.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Player/Run3.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Player/Run4.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Player/Run7.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Player/Jump0.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Player/Jump1.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Player/Jump3.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Player/Jump4.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Player/slide_0.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Player/slide_1.png" type="Texture" id=22]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "Walk",
"speed": 11.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "Run",
"speed": 13.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 18 ) ],
"loop": false,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 20 ) ],
"loop": false,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "Slide",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 15, 28 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 16, 28 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 26, 15 )

[node name="Player" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.001
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "Idle"

[node name="NormalCShape" type="CollisionShape2D" parent="." index="1"]

visible = false
position = Vector2( 0, 4 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="WalkCShape" type="CollisionShape2D" parent="." index="2"]

visible = false
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="SlideCShape" type="CollisionShape2D" parent="." index="3"]

visible = false
position = Vector2( 0, 5 )
shape = SubResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Camera" type="Camera2D" parent="." index="4"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 8.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.0
drag_margin_top = 0.5
drag_margin_right = 0.0
drag_margin_bottom = 0.5
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Drag Margin", "Limit", "Smoothing" ]


